--- a/app/widgets/donation/main.scss
+++ b/app/widgets/donation/main.scss
@@ -3,16 +3,12 @@ $step-size: 35;
 
 .donation-widget {
   padding: 0;
-  border: 1px solid rgba(0,0,0,0.3);
   fieldset {
     padding: 0;
     margin: 0;
   }
   .divider strong {
-    background-image: none;
-    &:after{
-      background:none;
-    }
+    margin-top: 20px;
   }
   .lock {
     position: absolute;
